# Sapphire

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md
cmake/: SapphireCodeGen.cmake  (+5 more)
src/SDK/: CMakeLists.txt
src/SDK/api/sapphire/: IMod.h  IPlugin.cpp  IPlugin.h
src/SDK/api/sapphire/GUI/: GUI.cpp  GUI.h
src/SDK/api/sapphire/command/: Command.cpp  Command.h  CommandFactory.h  CommandParam.h  CommandRegistry.cpp  CommandRegistry.h
src/SDK/api/sapphire/config/: Config.cpp  Config.h
src/SDK/api/sapphire/event/: Event.h  EventBus.cpp  EventBus.h  EventListener.h  EventManager.cpp  EventManager.h
src/SDK/api/sapphire/event/events/: AppInitializedEvent.h  AppTerminateEvent.h  ClientUpdateEvent.h  EnterWorldEvent.h  FrameEvents.h  GameUpdateGraphicEvent.h  LeaveWorldEvent.h  MinecraftGameInitFinishedEvent.h  MinecraftGameUpdateEvent.h  RenderLevelEvent.h
src/SDK/api/sapphire/gamerefs/: OwnerPtr.h  WeakRef.h
src/SDK/api/sapphire/hook/: Hook.cpp  Hook.h  SafeHook.h
src/SDK/api/sapphire/input/: ActionManager.h  InputManager.cpp  InputManager.h
src/SDK/api/sapphire/logger/: LogBox.hpp  Logger.cpp  Logger.h
src/SDK/api/sapphire/logger/impl/: GameLogger.h  LogFile.cpp  LogFile.h
src/SDK/api/sapphire/memory/: BedrockMemoryAllocator.cpp  BedrockMemoryAllocator.h
src/SDK/api/sapphire/platform/: Environment.cpp  Environment.h
src/SDK/api/sapphire/service/: Service.cpp  Service.h
src/SDK/api/sapphire/ui/: UI.h  UIContext.h  UIData.h  UIManager.cpp  UIManager.h  WindowViewModel.h
src/SDK/api/sapphire/ui/style/: Style.h  Theme.h
src/SDK/api/sapphire/ui/widget/: Canvas.h
src/SDK/api/sapphire/util/: DrawUtils.cpp  DrawUtils.h  Singleton.h
src/SDK/api/src-client/common/module/: GameModuleClient.h  IGameModuleApp.h
src/SDK/api/src-client/win/winrt/: AppPlatformWinRTDispatcher.cpp  AppPlatformWinRTDispatcher.h  AppPlatform_Winrt.cpp  AppPlatform_Winrt.h  HIDControllerWinRT.cpp  HIDControllerWinRT.h
src/SDK/api/src-deps/Application/: AppPlatform.cpp  AppPlatform.h  CommonPlatform.h  IAppPlatform.h  PlatformBuildInfo.h  PlatformRuntimeInfo.h
src/SDK/api/src-deps/Application/Uwp/: MainUWP.cpp  MainUWP.h
src/SDK/api/src-deps/Core/: NetworkChangeObserver.h
src/SDK/api/src-deps/Coregraphics/: BufferDescription.h  ImageBuffer.h  ImageDescription.h  RenderMaterial.h  RenderMaterialBase.h  RenderMaterialGroup.cpp  RenderMaterialGroup.h  RenderMaterialGroupBase.h  ResourceManager.h  TextureDescription.h  TextureMetaData.h
src/SDK/api/src-deps/Input/: HIDController.h  InputMode.h  Mouse.cpp  Mouse.h  MouseAction.h  MouseDevice.cpp  MouseDevice.h  PointerLocationEventData.h  RectangleArea.h  VoiceDevice.h
src/SDK/api/src-deps/Renderer/: Camera.h  Color.h  Matrix.h  MatrixStack.h  PointLight.h  ViewportInfo.h
src/SDK/api/src-deps/json/: Value.cpp  Value.h
src/SDK/api/src-external/bgfx/: FencedDynamicRingBuffer.h  FencedRingBuffer.h  bgfx.cpp  bgfx.h  bgfx_p.cpp  bgfx_p.h  config.h  defines.h  dxgi.cpp  dxgi.h  nvapi.h  platform.h  renderer_d3d12.cpp  renderer_d3d12.h  renderer_d3d12_internal.cpp  renderer_d3d12_internal.h  ringbuffer.h
src/SDK/api/src-external/bx/: allocator.h  float4x4_t.h  handlealloc.h  mutex.h  ringbuffer.h  semaphore.h  thread.h
src/SDK/api/src/common/: ActorUniqueID.h  App.h  AppPlatformListener.cpp  AppPlatformListener.h  CommonTypes.h  GameControllerHandler.h  GameControllerHandler_winrt.cpp  GameControllerHandler_winrt.h  IApp.h  IMinecraftApp.h
src/SDK/api/src/win/: AppPlatformWindows.h
src/SDK/core/: ApiManager.cpp  ApiManager.h  Core.cpp  Core.h  CrashLog.cpp  CrashLog.h  DX12Hook.cpp  DX12Hook.h  IPCClient.cpp  IPCClient.h  IPlugin.cpp  IPlugin.h  IatPatcher.cpp  IatPatcher.h  MainModuleInfo.h  PluginManager.cpp  PluginManager.h  RenderBackend.cpp  RenderBackend.h  Runtime.cpp  Runtime.h  SapphireMain.cpp  Signature.h  SymbolResolver.cpp  SymbolResolver.h
src/SDK/core/mod/: ModInstance.cpp  ModInstance.h  ModManifest.h  ModRepository.cpp  ModRepository.h
src/bootloader/: Bootloader.cpp  Bootloader.h  BootloaderMain.cpp  CMakeLists.txt  IatPatcher.cpp  IatPatcher.h  LogBox.h  RuntimeLinker.cpp  RuntimeLinker.h  SigDatabase.cpp  SigDatabase.h  SymbolResolver.cpp  SymbolResolver.h
src/builtinmod/: BuiltinMod.cpp  BuiltinMod.h  CMakeLists.txt  manifest.json.in
src/builtinmod/BCM_V2/: BCMMod.cpp  BCMMod.h
src/builtinmod/BCM_V2/editor/: CamTimeline.h  CameraPath.cpp  CameraPath.h  Editor.cpp  Editor.h
src/builtinmod/BCM_V2/ui/: MainUIWindowView.cpp  MainUIWindowView.h  MainUIWindowViewModel.h
src/builtinmod/chunkborder/: ChunkBorderRenderer.cpp  ChunkBorderRenderer.h
src/builtinmod/freecamera/: FreeCamera.cpp  FreeCamera.h
src/builtinmod/smoothpiston/: PistonLerpTools.h  SmoothPiston.cpp  SmoothPiston.h
src/builtinmod/tickrate/: AudioSpeed.cpp  TickRate.cpp  TickRate.h
src/functions/: CMakeLists.txt  builtinPlugin.cpp  builtinPlugin.h
src/functions/guioverlay/: DX12Hook.cpp  DX12Hook.h  GuiOverlay.cpp  GuiOverlay.h
src/functions/smoothpiston/: SmoothPiston.cpp  SmoothPiston.h
src/functions/tickrate/: AudioSpeed.cpp  TickrateTest.cpp
src/injector/: CMakeLists.txt  UWPinjector.cpp  Win32Injector.cpp  sapphire.rc
src/plugins/: CMakeLists.txt  builtinPlugin.cpp  builtinPlugin.h
src/plugins/BCM/: BCM.cpp  BCM.h
src/plugins/BCM/editor/: BCMEditor.cpp  BCMEditor.h  CameraPath.cpp  CameraPath.h
src/plugins/BCM/editor/widgets/: KeyframeTableWidget.cpp  KeyframeTableWidget.h  TimelineWidget.cpp  TimelineWidget.h
src/plugins/BCM_V2/: BCMPlugin.cpp  BCMPlugin.h
src/plugins/BCM_V2/editor/: CamTimeline.cpp  CameraPath.cpp  CameraPath.h  Editor.cpp  Editor.h
src/plugins/BCM_V2/math/: Interpolation.h  Intersection.h
src/plugins/BCM_V2/ui/: MainUIWindowView.cpp  MainUIWindowViewModel.h  TimelineWidgetViewModel.h
src/plugins/chunkborder/: ChunkBorderRenderer.cpp
src/plugins/freecamera/: FreeCamera.cpp  FreeCamera.h
src/plugins/smoothpiston/: SmoothPiston.cpp  SmoothPiston.h
src/plugins/tickrate/: AudioSpeed.cpp  AudioSpeed.h  TickRateTest.cpp  TickRateTest.h
(+799 files in other folders)
